# DummyEngine

./: .gitignore
assets/materials/: fluid_debug.txt
assets/models/vegetation/: leaf_tree2.mesh
assets/scenes/: clustered_lights.json  courtroom.json  fluid_test.json  tessellation_test.json  test_lights.json  vegetation_test.json
assets/shaders/: _book_test.frag.glsl  _fluid_debug.frag.glsl  common.glsl  common_fs.glsl  common_vs.glsl  holographic.frag.glsl  main_glass_thin.frag.glsl  main_probelit.vert.glsl  main_probelit_nossr.frag.glsl  main_probelit_pom.frag.glsl  main_probelit_sss.frag.glsl  main_probelit_vege.vert.glsl  main_translucent.frag.glsl
assets/shaders/internal/: _common.glsl  _fs_common.glsl  _vs_common.glsl  fillz_vege.vert.glsl
src/: CMakeLists.txt
src/DummyApp/: CMakeLists.txt  DummyApp_win32.cpp  main_pc.cpp
src/DummyLib/: CMakeLists.txt  Viewer.cpp
src/DummyLib/Gui/: SeqCanvasUI.cpp
src/DummyLib/Renderer/: Renderer.cpp  Renderer.h  Renderer_Backend_GLES3.cpp  Renderer_GL_Defines.inl  Renderer_GL_Shaders.inl
src/DummyLib/Scene/: SceneManager_ASS.cpp
src/DummyLib/States/: GSCreate.cpp  (+6 more)
src/Eng/: CMakeLists.txt
src/Modl/: ModlApp.cpp  ModlApp.h  ModlAppGL.cpp
src/Ren/: CMakeLists.txt  Context.h  ContextVK.cpp  Mesh.cpp  Mesh.h  ProgramVK.cpp  ProgramVK.h  TextureAtlasGL.cpp  TextureVK.cpp  TextureVK.h  Utils.h  VK.h  VKExt.cpp  _Ren.cpp
src/Snd/: Buffer.h  BufferAL.cpp  CMakeLists.txt  Context.cpp  Context.h  ContextAL.cpp  Source.h  SourceAL.cpp  _Snd.cpp
src/Snd/OpenAL/libs/Win32/: OpenAL32.lib
src/Sys/: Json.cpp  Json.h
(+29 files in other folders)
